--- a/app/globals.css
+++ b/app/globals.css
@@ -62,13 +62,21 @@
     }
   }
 
-  --animate-blink-cursor: blink-cursor 1.2s step-end infinite
-;
+  --animate-blink-cursor: blink-cursor 1.2s step-end infinite;
+
   @keyframes blink-cursor {
-  0%, 49% {
-    opacity: 1;}
-  50%, 100% {
-    opacity: 0;}}}
+
+    0%,
+    49% {
+      opacity: 1;
+    }
+
+    50%,
+    100% {
+      opacity: 0;
+    }
+  }
+}
 
 body {
   overflow-x: hidden;
@@ -175,6 +183,6 @@ body {
   h4,
   h5,
   h6 {
-    @apply font-display;
+    @apply font-display leading-tight;
   }
 }
